Forestry trees now generate naturally